tests/snapshots/vci_pre_auth__reduce_claims.snap
---
source: tests/vci_pre_auth.rs
assertion_line: 426
expression: jwt.claims.vc
---
"@context": []
id: "http://credibil.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
name:
  "@value": Employee ID
  "@language": en-NZ
description:
  "@value": Credibil employee ID credential
  "@language": en-NZ
issuer: "http://credibil.io"
credentialSubject:
  family_name: Person
  given_name: Normal
  id: "[id]"
validFrom: "[validFrom]"
